@@ -54,4 +54,12 @@ PHORONIX TEST SUITE PUBLIC TODO LIST:
 - http://tesseract.gg/
 - https://github.com/facebook/linkbench
 - https://github.com/vasi/pixz
-- Update download links on build-imagemagick
+- http://nondot.org/sabre/LLVMNotes/#benchmarks
+
+### WEB SOCKET / HTML5 USER INTERFACE WORK ###
+
+- Implement WebSocket security - add the password prompts from ~/.phoronix-test-suite/user-config.xml, etc
+- HTTPS support
+- Ensuring only one session at a time, at least for benchmarking
+- Handle test installations and external dependencies (prompting for root password handling?)
+- Porting more of the web-interface code to the new JavaScript + WebSocket design rather than original PHP design [Originally with the 5.0 UI design it wasn't settled for mostly JS + WebSocket but some of the original code is with a traditional PHP-based + web server design... so slowly move over to newer design.]
